# zhiying-backend

./: .dockerignore  .env.example  AGENTS.md  Cargo.toml  Dockerfile  PROGRESS.md  README.md  justfile  skills-lock.json
src/: auth.rs  bootstrap.rs  config.rs  error.rs  lib.rs  main.rs  response.rs  state.rs
src/entities/: code_video.rs  common.rs  interactive_html.rs  knowledge_explanation.rs  knowledge_video.rs  mod.rs  pretest_problem.rs  problem.rs  study_quiz.rs  study_quiz_problem.rs  study_stage.rs  study_subject.rs  study_task.rs  user.rs  user_checkin.rs  user_code_video_link.rs  user_interactive_html_link.rs  user_knowledge_video_link.rs
src/migration/: m0001_init_schema.rs  mod.rs
src/routes/: checkins.rs  code_videos.rs  interactive_htmls.rs  internal.rs  knowledge_explanations.rs  knowledge_videos.rs  me.rs  mod.rs  placeholders.rs  problems.rs  public_config.rs  quiz_problems.rs  study_quizzes.rs  study_stages.rs  study_subjects.rs  study_tasks.rs  tokens.rs  user_views.rs  users.rs
src/services/: checkin.rs  content.rs  message_queue.rs  mod.rs  password.rs  study_subject.rs
tests/: api_http.rs  auth.rs  checkin.rs  content.rs  misc.rs  problem.rs  profile.rs  quiz.rs  recharge.rs  study_stage_task.rs  study_subject.rs
tests/common/: mod.rs
